// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPreferencesIntroductionComponent should match snapshot on desktop 1`] = `
<div>
  <h1
    class="fr-h3 fr-mb-2w fr-text--bold"
  >
    Pourquoi gérer mes accès dans FranceConnect ?
  </h1>
  <p
    class="is-normal fr-mb-5v"
  >
    Pour mieux contrôler votre usage de FranceConnect et vous protéger en cas de vols de vos identifiants, vous pouvez bloquer l’utilisation des comptes que vous n’utilisez pas. 
    <strong>
      Ils seront toujours visibles sur la page de sélection de compte mais FranceConnect empêchera la connexion d’aboutir. 
    </strong>
    Vous pourrez les réactiver à n’importe quel moment depuis cette page.
  </p>
  <p
    class="is-normal"
  >
    Ces comptes resteront disponibles sur leur service d’origine, par exemple : 
    <strong>
      si vous bloquez le compte Impôts dans FranceConnect, votre compte Impôts reste utilisable sur le site impots.gouv.fr sans passer par FranceConnect.
    </strong>
  </p>
  <p
    class="fr-h6 fr-mt-4w fr-mb-2w fr-text--bold"
  >
    En images :
  </p>
  <div
    class="flex-wrapper flex-between"
  >
    <div
      class="fr-mb-5w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        1. Un usurpateur tente de se connecter à Service-Public.fr
      </strong>
      <img
        alt="Tentative de connexion"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-01.png"
        width="350"
      />
    </div>
    <div
      class="fr-mb-5w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        2. L’usurpateur tente d’utiliser un compte préalablement bloqué
      </strong>
      <img
        alt="Utilisation d'un compte bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-02.png"
        width="350"
      />
    </div>
    <div
      class=""
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        3. L’usurpateur parvient à s’identifier
      </strong>
      <img
        alt="Identification"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-03.png"
        width="350"
      />
    </div>
    <div
      class=""
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        4. FranceConnect bloque la connexion
      </strong>
      <img
        alt="Usurpateur bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-04.png"
        width="350"
      />
    </div>
  </div>
</div>
`;

exports[`UserPreferencesIntroductionComponent should match snapshot on mobile 1`] = `
<div>
  <h1
    class="fr-h3 fr-mb-2w fr-text--bold"
  >
    Pourquoi gérer mes accès dans FranceConnect ?
  </h1>
  <p
    class="is-normal fr-mb-5v"
  >
    Pour mieux contrôler votre usage de FranceConnect et vous protéger en cas de vols de vos identifiants, vous pouvez bloquer l’utilisation des comptes que vous n’utilisez pas. 
    <strong>
      Ils seront toujours visibles sur la page de sélection de compte mais FranceConnect empêchera la connexion d’aboutir. 
    </strong>
    Vous pourrez les réactiver à n’importe quel moment depuis cette page.
  </p>
  <p
    class="is-normal"
  >
    Ces comptes resteront disponibles sur leur service d’origine, par exemple : 
    <strong>
      si vous bloquez le compte Impôts dans FranceConnect, votre compte Impôts reste utilisable sur le site impots.gouv.fr sans passer par FranceConnect.
    </strong>
  </p>
  <p
    class="fr-h6 fr-mt-4w fr-mb-2w fr-text--bold"
  >
    En images :
  </p>
  <div
    class="flex-wrapper flex-center"
  >
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        1. Un usurpateur tente de se connecter à Service-Public.fr
      </strong>
      <img
        alt="Tentative de connexion"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-01.png"
        width="100%"
      />
    </div>
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        2. L’usurpateur tente d’utiliser un compte préalablement bloqué
      </strong>
      <img
        alt="Utilisation d'un compte bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-02.png"
        width="100%"
      />
    </div>
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        3. L’usurpateur parvient à s’identifier
      </strong>
      <img
        alt="Identification"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-03.png"
        width="100%"
      />
    </div>
    <div
      class=""
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        4. FranceConnect bloque la connexion
      </strong>
      <img
        alt="Usurpateur bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-04.png"
        width="100%"
      />
    </div>
  </div>
</div>
`;

exports[`UserPreferencesIntroductionComponent should match snapshot on tablet 1`] = `
<div>
  <h1
    class="fr-h3 fr-mb-2w fr-text--bold"
  >
    Pourquoi gérer mes accès dans FranceConnect ?
  </h1>
  <p
    class="is-normal fr-mb-5v"
  >
    Pour mieux contrôler votre usage de FranceConnect et vous protéger en cas de vols de vos identifiants, vous pouvez bloquer l’utilisation des comptes que vous n’utilisez pas. 
    <strong>
      Ils seront toujours visibles sur la page de sélection de compte mais FranceConnect empêchera la connexion d’aboutir. 
    </strong>
    Vous pourrez les réactiver à n’importe quel moment depuis cette page.
  </p>
  <p
    class="is-normal"
  >
    Ces comptes resteront disponibles sur leur service d’origine, par exemple : 
    <strong>
      si vous bloquez le compte Impôts dans FranceConnect, votre compte Impôts reste utilisable sur le site impots.gouv.fr sans passer par FranceConnect.
    </strong>
  </p>
  <p
    class="fr-h6 fr-mt-4w fr-mb-2w fr-text--bold"
  >
    En images :
  </p>
  <div
    class="flex-wrapper text-center"
  >
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        1. Un usurpateur tente de se connecter à Service-Public.fr
      </strong>
      <img
        alt="Tentative de connexion"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-01.png"
        width="350"
      />
    </div>
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        2. L’usurpateur tente d’utiliser un compte préalablement bloqué
      </strong>
      <img
        alt="Utilisation d'un compte bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-02.png"
        width="350"
      />
    </div>
    <div
      class="fr-mb-3w"
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        3. L’usurpateur parvient à s’identifier
      </strong>
      <img
        alt="Identification"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-03.png"
        width="350"
      />
    </div>
    <div
      class=""
    >
      <strong
        class="fr-text--md is-block fr-mb-1w"
      >
        4. FranceConnect bloque la connexion
      </strong>
      <img
        alt="Usurpateur bloqué"
        class="shadow-bottom"
        src="/images/user-preferences-tutoriel-04.png"
        width="350"
      />
    </div>
  </div>
</div>
`;
